--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,12 +6,17 @@
         xmlns:local="clr-namespace:WpfApp1999"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        <StackPanel x:Name="stackPanel">
-            <CheckBox x:Name="checkBox1" IsThreeState="True" IsChecked="False" Height="20" Content="Неотмечено" />
-            <CheckBox x:Name="checkBox2" IsThreeState="True" IsChecked="True" Height="20" Content="Отменено" />
-            <CheckBox x:Name="checkBox3" IsThreeState="True" IsChecked="{x:Null}" Height="20" Content="Неопределенно" />
+     <Grid>
+        <StackPanel x:Name="StackPanel">
+            <RadioButton GroupName="Boot" x:Name="RadioButton_Boot1" Checked="RadioButton_Checked">Загрузиться с жесткого диска</RadioButton>
+            <RadioButton GroupName="Boot" x:Name="RadioButton_Boot2" Checked="RadioButton_Checked">Загрузиться с DVD провода</RadioButton>
+            <RadioButton GroupName="Boot" x:Name="RadioButton_Boot3" Checked="RadioButton_Checked">Установить операционную систему</RadioButton>
+            <RadioButton GroupName="Laungauges" Content="C#" IsChecked="True" Checked="RadioButton_Checked"/>
+            <RadioButton GroupName="Laungauges" Content="VB.NET" Checked="RadioButton_Checked"/>
+            <RadioButton GroupName="Laungauges" Content="C++" Checked="RadioButton_Checked"/>
+            <RadioButton GroupName="Technologies" Content="WPF" IsChecked="True" Checked="RadioButton_Checked"/>
+            <RadioButton GroupName="Technologies" Content="WinForms" Checked="RadioButton_Checked"/>
+            <RadioButton GroupName="Technologies" Content="ASP.NET" Checked="RadioButton_Checked"/>
         </StackPanel>
-
     </Grid>
 </Window>
