--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,17 +6,11 @@
         xmlns:local="clr-namespace:WpfApp1999"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-     <Grid>
-        <StackPanel x:Name="StackPanel">
-            <RadioButton GroupName="Boot" x:Name="RadioButton_Boot1" Checked="RadioButton_Checked">Загрузиться с жесткого диска</RadioButton>
-            <RadioButton GroupName="Boot" x:Name="RadioButton_Boot2" Checked="RadioButton_Checked">Загрузиться с DVD провода</RadioButton>
-            <RadioButton GroupName="Boot" x:Name="RadioButton_Boot3" Checked="RadioButton_Checked">Установить операционную систему</RadioButton>
-            <RadioButton GroupName="Laungauges" Content="C#" IsChecked="True" Checked="RadioButton_Checked"/>
-            <RadioButton GroupName="Laungauges" Content="VB.NET" Checked="RadioButton_Checked"/>
-            <RadioButton GroupName="Laungauges" Content="C++" Checked="RadioButton_Checked"/>
-            <RadioButton GroupName="Technologies" Content="WPF" IsChecked="True" Checked="RadioButton_Checked"/>
-            <RadioButton GroupName="Technologies" Content="WinForms" Checked="RadioButton_Checked"/>
-            <RadioButton GroupName="Technologies" Content="ASP.NET" Checked="RadioButton_Checked"/>
-        </StackPanel>
-    </Grid>
+  <Grid>
+        <ComboBox SelectedIndex="1">
+            <ComboBoxItem Content="Red"/>
+            <ComboBoxItem Content="Green"/>
+            <ComboBoxItem Content="Blue"/>
+        </ComboBox>
+  </Grid>
 </Window>
